# platformer

./: Cargo.toml  run.zsh
assets/: map.ldtk
assets/map/backups/39227760-c640-11ed-bac6-0b5f56187457_2023-10-09_19-19-02_crash/: map.ldtk
src/: ai.rs  camera.rs  collisions.rs  creature.rs  enemy.rs  inventory.rs  items.rs  ladder.rs  lib.rs  main.rs  map.rs  particles.rs  player.rs  projectile.rs  ui.rs
