[package]
name = "platformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.3", features = ["wayland"] }
bevy_ecs_ldtk = { version = "0.8.0", features = ["atlas"] }
bevy_ecs_tilemap = "0.11.0"
bevy_rapier2d = "0.22.0"
ldtk_rust = "0.6.0"
rand = "0.8.5"
serde_json = "1.0.107"
